service/argocd-workflows-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-workflows-service-port
  namespace: argo-cd
spec:
  type: LoadBalancer
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 2746
  selector:
    app.kubernetes.io/name: argo-workflows-server
