service/postgresql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service-port
  namespace: postgresql
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app.kubernetes.io/name: postgresql
