service/jenkins-service-ingress.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: jenkins-service-port
#   namespace: jenkins
# spec:
#   type: ClusterIP
#   ports:
#     - port: 8081
#       protocol: TCP
#       targetPort: 8080
#   selector:
#     app.kubernetes.io/name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-jnlp
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 50000
      protocol: TCP
      targetPort: 50000
    # nodePort: 50000  #  use with type: NodePort
  selector:
    app.kubernetes.io/name: jenkins
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  # annotations:
  #   kubernetes.io/ingress.class: nginx    # nginx
    # traefik.frontend.rule.type: PathPrefixStrip
# spec:
#   ingressClassName: nginx   # nginx
#   rules:
#     - host: jenkins.localhost
#       http:
#         paths:
#           - pathType: Prefix
#             path: /
#             backend:
#               service:
#                 name: jenkins
#                 port:
#                   number: 8080
spec:
  rules:
    - host: jenkins.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  name: http
