service/jenkins-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-port
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-jnlp
  namespace: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 50000
      protocol: TCP
      targetPort: 50000
    # nodePort: 50000  #  use with type: NodePort
  selector:
    app.kubernetes.io/name: jenkins
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
    - host: jenkins.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jenkins-service-port
                port:
                  number: 8081
  ingressClassName: nginx
