service/kubernetes-dashboard-ingress.yaml
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: kubernetes-dashboard
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: kubernetes-dashboard
#   namespace: kubernetes-dashboard
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: kubernetes-dashboard
#   template:
#     metadata:
#       labels:
#         app: kubernetes-dashboard
#     spec:
#       containers:
#       - name: kubernetes-dashboard
#         image: kubernetesui/dashboard:v2.0.5
#         ports:
#         - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: kubernetes-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: dashboard.test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
