service/kubernetes-dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-web-service
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/name: kubernetes-dashboard-web
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: dashboard-metrics-scraper
#   namespace: kubernetes-dashboard
# spec:
#   type: LoadBalancer ClusterIP
#   ports:
#     - port: 8000
#       protocol: TCP
#       targetPort: 8000
#   selector:
#     k8s-app: dashboard-metrics-scraper
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: kubernetes-dashboard.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubernetes-dashboard-web-service
                port:
                  number: 8000
  ingressClassName: nginx
