service/traefik-service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  # namespace: traefik
spec:
  type: ClusterIP
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  # namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik  # traefik, nginx
    # nginx.ingress.kubernetes.io/rewrite-target: "http://traefik.localhost/dashboard/#/"
spec:
  ingressClassName: traefik   # traefik, nginx
  rules:
    - host: traefik.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik-service
                port:
                  number: 9000
